// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`boolean output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": true
    }
  }
}"
`;

exports[`dependent output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"depends_on\\": [
        \\"\${test_resource.weird-long-running-resource}\\"
      ],
      \\"value\\": 1
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"weird-long-running-resource\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`description output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"description\\": \\"test-description\\",
      \\"value\\": 1
    }
  }
}"
`;

exports[`expression output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"\${upper(\\\\\\"foo\\\\\\")}\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"foo\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`full resource output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"\${test_resource.foo}\\"
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"foo\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`list output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": [
        \\"foo\\",
        \\"bar\\"
      ]
    }
  }
}"
`;

exports[`map output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": {
        \\"foo\\": \\"bar\\"
      }
    }
  }
}"
`;

exports[`number output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": 1
    }
  }
}"
`;

exports[`resource map output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": {
        \\"myResource\\": \\"\${test_resource.foo}\\",
        \\"something\\": \\"else\\"
      }
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"foo\\": {
        \\"name\\": \\"foo\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`resource[] output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": [
        \\"\${test_resource.foo1}\\",
        \\"\${test_resource.foo2}\\"
      ]
    }
  },
  \\"provider\\": {
    \\"test\\": [
      {
      }
    ]
  },
  \\"resource\\": {
    \\"test_resource\\": {
      \\"foo1\\": {
        \\"name\\": \\"foo1\\"
      },
      \\"foo2\\": {
        \\"name\\": \\"foo2\\"
      }
    }
  },
  \\"terraform\\": {
    \\"required_providers\\": {
      \\"test\\": {
        \\"version\\": \\"~> 2.0\\"
      }
    }
  }
}"
`;

exports[`sensitive output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"sensitive\\": true,
      \\"value\\": 1
    }
  }
}"
`;

exports[`static output id (without feature flags enabled) 1`] = `
"{
  \\"output\\": {
    \\"my_static_output_name\\": {
      \\"value\\": \\"1\\"
    }
  }
}"
`;

exports[`string output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"1\\"
    }
  }
}"
`;

exports[`variable output 1`] = `
"{
  \\"output\\": {
    \\"test-output\\": {
      \\"value\\": \\"\${var.test-variable}\\"
    }
  },
  \\"variable\\": {
    \\"test-variable\\": {
    }
  }
}"
`;
